2009-02-20  Richard Dale  <richard.j.dale@gmail.com>
	* Regenerate the Qyoto sources from the Qt 4.5 headers

2009-02-17  Arno Rehn  <arno@arnorehn.de>
	* Give some delegates more sophisticated names.
	* Add support for C# events. They're called Signal<signalName> and if they're
	  overloaded, additionally have their arguments attached to their name.
	  This should be considered highly experimental and can change at any time.

2009-02-16  Arno Rehn  <arno@arnorehn.de>
	* Add QTextBlock and QTextFrame iterators. operator++ and operator-- are
	  instance members in C++, but map onto static members in C#. Take care of
	  that in CallSmokeMethod().
	* If there's an AssemblyTitleAttribute present, the fake argv[0] argument for
	  Q(Core)Application will now have its 'Title' value. If not, argv[0] is the
	  basename of the entry assembly. This is based on a suggestion by Eric Butler,
	  thanks!

2009-02-01  Richard Dale  <richard.j.dale@gmail.com>
	* The construct_copy() function was using the full classname of the class
	  to construct which meant that it didn't work with classnames containing
	  '::' scope operators. So strip out the scope part of the classname to
	  create the consructor name.

2009-01-11  Arno Rehn  <arno@arnorehn.de>
	* Implement disconnecting delegates from a signal.

2009-01-10  Arno Rehn  <arno@arnorehn.de>

	* Add QGraphicsItemInternal that implements QGraphicsItem's abstract methods.
	  This should fix a bug reported by Eric Butler.

2008-12-23  Arno Rehn  <arno@arnorehn.de>

	* Add a QList<const char*> marshaller. For the moment it only works in the
	  'ToObject' direction.
	* Add support for on-the-fly compilation of dataengines.

2008-12-20  Arno Rehn  <arno@arnorehn.de>

	* Revert pointerMap to a Dictionary. The crash that was reported by Eric
	  occured because Dictionary isn't thread-safe. Enclose the operations on
	  pointerMap in a lock (pointerMap) { ... } to synchronise the threads and
	  prevent the crash.
